test/files/ill-typed/2.lam
let x = true in (if iszero(x) then 1 else 0)
